test/ui/tests/parsing/illegal-token.stderr
error[E010]: found illegal character U+95F4 `间` but expected parameter, terminator, type annotation or keyword `of`
 --> ${TEST_FOLDER}/parsing/illegal-token.lushui:3:13
  |
3 | data System 间: 时
  |             ^^ unexpected token
  |

error: aborting due to previous error

